[BE] 시큐리티 수정